2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/Makefile.am: PAM enabled chpasswd now needs to be linked to
	the PAM library, even if --enable-account-tools-setuid is not
	used.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Added the line number when an error is reported
	instead of only the username.
	* src/chpasswd.c: PAM enabled chpasswd do may change the password
	database (for the user where the password update succeeded) even
	if there were a failure for one user. Do not indicate that changes
	were ignored.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Exit immediately when unlocking a password would
	result in a passwordless account. This avoid printing a success
	message after the warning.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/nologin.c: Include <stdlib.h> to get EXIT_FAILURE.

2009-05-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Fix build failure on non-PAM enabled system
	when --without-pam is not specified.

2009-04-30  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Ignore teh return values of fclose() and
	unlink() in case of failure of fopen_set_perms() or
	create_backup().
	* lib/commonio.c: Should the backup file be unlink'ed in case of
	failure of create_backup()?

2009-04-30  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getulong.c: Added splint annotations.

2009-04-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c, src/chfn.c, src/groupmems.c, src/usermod.c,
	src/userdel.c, src/chpasswd.c, src/grpck.c, src/gpasswd.c,
	src/groupdel.c, src/chgpasswd.c, src/vipw.c, src/useradd.c,
	src/su.c, src/groupmod.c, src/passwd.c, src/pwck.c,
	src/groupadd.c, src/chage.c, src/login.c, src/faillog.c,
	src/sulogin.c, src/chsh.c, src/pwconv.c: Added splint annotations.
	* src/userdel.c, src/pwconv.c, src/lastlog.c, src/grpck.c,